<resources>
    <string name="lynx_settings">Lynx Settings</string>
    <string name="lynx_about_bliss">About Lynx Bliss</string>
    <string name="lynx_faq">Lynx FAQ</string>
    <string name="lynx_history">Lynx History</string>
    <string name="lynx_changelog">Lynx ChangeLog</string>
    <string name="lynx_general">General</string>
    <string name="lynx_other">Other</string>
    <string name="lynx_enable_links">Enable Links</string>
    <string name="lynx_enable_links_key">lynx.links</string>
    <string name="lynx_enable_links_summary">Links will be parsed and clickable</string>
    <string name="lynx_anti_loggers">Anti Loggers</string>
    <string name="lynx_anti_loggers_key">lynx.loggers</string>
    <string name="lynx_anti_loggers_summary">Cards you send/receive will open Google</string>
    <string name="lynx_no_pull">No Pull</string>
    <string name="lynx_no_pull_key">lynx.pull</string>
    <string name="lynx_no_pull_summary">Disables pull to scan in convo list</string>
    <string name="lynx_privacy_mode">Privacy Mode</string>
    <string name="lynx_privacy_mode_key">lynx.privacy</string>
    <string name="lynx_privacy_mode_summary">Hide message previews on convo screen</string>
    <string name="lynx_appearance">Appearance</string>
    <string name="lynx_square_pictures">Square Pictures</string>
    <string name="lynx_square_pictures_key">lynx.square</string>
    <string name="lynx_square_pictures_summary">Profile pictures will be squares</string>
    <string name="lynx_emoticons">Emoticons</string>
    <string name="lynx_all_emoticons">All Emoticons</string>
    <string name="lynx_ghost_emoticons">Ghost Emoticons</string>
    <string name="lynx_check_for_update">Check for Update</string>
    <string name="lynx_timestamps">Timestamps</string>
    <string name="lynx_custom_crash">Custom Crash</string>
    <string name="lynx_copy_error_log">Copy Error Log</string>
    <string name="lynx_copy_error_log_key">lynx.crash.clipboard</string>
    <string name="lynx_copy_error_log_summary">Lets you copy the error message when clicking on the error dialog</string>
    <string name="lynx_select_and_scroll_error_message">Select and Scroll Error message</string>
    <string name="lynx_select_and_scroll_error_message_key">lynx.crash.select</string>
    <string name="lynx_select_and_scroll_error_message_summary">Allows you to select and scroll through the text thats on the error dialog</string>
    <string name="lynx_enable_custom_title">Enable Custom Title</string>
    <string name="lynx_enable_custom_title_key">lynx.crash.title</string>
    <string name="lynx_enable_custom_title_summary">Allows you set the error dialog title to your likings</string>
    <string name="lynx_set_all_caps">Set All Caps</string>
    <string name="lynx_set_all_caps_key">lynx.crash.caps</string>
    <string name="lynx_set_all_caps_summary">Changes all the error text to upper case</string>
    <string name="lynx_light_error_background_color">Light Error Background color</string>
    <string name="lynx_light_error_background_color_key">lynx.crash.lightbg</string>
    <string name="lynx_light_error_background_color_summary">Changes the error dialog background to white</string>
    <string name="lynx_dark_error_text_color">Dark Error Text Color</string>
    <string name="lynx_dark_error_text_color_key">lynx.crash.darktext</string>
    <string name="lynx_dark_error_text_color_summary">Changes the error text color to black</string>
    <string name="lynx_all_emoticons_summary">"Press 'wait' if it pops up saying Lynx is not responding"</string>
    <string name="lynx_per_chat">Per-Chat</string>
    <string name="lynx_disable_typing">Disable Typing</string>
    <string name="lynx_disable_typing_key">lynx.typing</string>
    <string name="lynx_disable_typing_summary">Others will not see you typing</string>
    <string name="lynx_read_receipts">Read Receipts</string>
    <string name="lynx_read_receipts_key">lynx.receipts</string>
    <string name="lynx_read_receipts_summary">How your messages are received</string>
    <string name="lynx_do_not_disturb">Do Not Disturb</string>
    <string name="lynx_do_not_disturb_key">lynx.disturb</string>
    <string name="lynx_do_not_disturb_summary">Automatically leaves groups you are added to</string>
    <string name="lynx_notifications">Notifications</string>
    <string name="lynx_hide_message_text">Hide Message Text</string>
    <string name="lynx_hide_message_text_key">lynx.notify.message</string>
    <string name="lynx_hide_message_text_summary">Hides message text from your notifications</string>
    <string name="lynx_hide_message_username">Hide Message Username</string>
    <string name="lynx_hide_message_username_key">lynx.notify.username</string>
    <string name="lynx_hide_message_username_summary">Hides usernames from your notifications</string>
    <string name="lynx_hide_message_icon">Hide Message Icon</string>
    <string name="lynx_hide_message_icon_key">lynx.notify.icon</string>
    <string name="lynx_hide_message_icon_summary">Hides message icons from your notifications</string>
    <string name="lynx_square_message_icon">Square Message Icon</string>
    <string name="lynx_square_message_icon_key">lynx.notify.squareicon</string>
    <string name="lynx_square_message_icon_summary">Makes the notification icon square</string>
    <string name="lynx_theme">Theme</string>
    <string name="lynx_media">Media</string>
    <string name="lynx_media_options">Media Options</string>
    <string name="lynx_media_options_summary">How your medias are sent</string>
    <string name="lynx_clipboard">Clipboard</string>
    <string name="lynx_share_lynx">Share Lynx</string>
    <string name="lynx_random_password">Random Password</string>
    <string name="lynx_random_uuid">Random UUID</string>
    <string name="lynx_time_and_date">Time and Date</string>
    <string name="lynx_unix_timestamp">Unix Timestamp</string>
    <string name="lynx_jid">JID</string>
    <string name="lynx_kik_username">Kik Username</string>
    <string name="lynx_kik_full_name">Kik Full Name</string>
    <string name="lynx_kik_first_name">Kik First Name</string>
    <string name="lynx_kik_last_name">Kik Last Name</string>
    <string name="lynx_kik_email">Kik Email</string>
    <string name="lynx_troll">Troll</string>
    <string name="lynx_auto_reply">Auto Reply</string>
    <string name="lynx_auto_reply_key">lynx.autoreply</string>
    <string name="lynx_auto_reply_summary">Sends reply messages instantly</string>
    <string name="lynx_auto_type">Auto Type</string>
    <string name="lynx_auto_type_key">lynx.autotype</string>
    <string name="lynx_auto_type_summary">Send is typing... instantly</string>
    <string name="lynx_auto_meme">Auto Meme</string>
    <string name="lynx_auto_meme_key">lynx.automeme</string>
    <string name="lynx_auto_meme_summary">BEST MEME EVER</string>
    <string name="lynx_auto_annoy">Auto Annoy</string>
    <string name="lynx_auto_annoy_key">lynx.autoannoy</string>
    <string name="lynx_auto_annoy_summary">BEST TOGGLE EVER</string>
    <string name="lynx_auto_nudes">Auto Nudes</string>
    <string name="lynx_auto_nudes_key">lynx.autonudes</string>
    <string name="lynx_auto_nudes_summary">BEST NUDES EVER</string>
    <string name="lynx_skynet">Skynet</string>
    <string name="lynx_skynet_key">lynx.ai</string>
    <string name="lynx_skynet_summary">BEST MOD EVER</string>
    <string name="lynx_auto_read">Auto Read</string>
    <string name="lynx_auto_read_key">lynx.autoread</string>
    <string name="lynx_auto_read_summary">Sends read receipts instantly</string>
    <string name="lynx_custom_autoreply">Auto Reply Message</string>
    <string name="lynx_custom_autoreply_summary">Set the message Auto Reply will send.</string>
    <string name="lynx_background_color">Background Color</string>
    <string name="lynx_background_color_key">lynx.bg</string>
    <string name="lynx_background_color_summary">Customize your Background</string>
    <string name="lynx_enable_timestamps">Enable Timestamps</string>
    <string name="lynx_enable_timestamps_key">lynx.enable.timestamp</string>
    <string name="lynx_enable_timestamps_summary">"Enables timestamps
(Random/Custom)"</string>
    <string name="lynx_random_timestamps">Random Timestamps</string>
    <string name="lynx_random_timestamps_key">lynx.random.timestamp</string>
    <string name="lynx_random_timestamps_summary">Message sent timestamp is random everytime</string>
    <string name="lynx_custom_timestamps">Custom Timestamps</string>
    <string name="lynx_custom_timestamps_key">lynx.custom.timestamp</string>
    <string name="lynx_custom_timestamps_summary">Custom Timestamps for your messages</string>
    <string name="lynx_welcome_back">Welcome Back</string>
    <string name="lynx_enable_welcome_back">Enable Welcome Back</string>
    <string name="lynx_enable_welcome_back_key">lynx.wb</string>
    <string name="lynx_enable_welcome_back_summary">Enables Welcome back toast</string>
    <string name="lynx_custom_welcome_back">Custom welcome back</string>
    <string name="lynx_custom_welcome_back_summary">Custom welcome back text</string>
    <string name="lynx_enable_group_trolls">Enables Group Trolls</string>
    <string name="lynx_enable_group_trolls_summary">Enables Troll Options to work on group chats</string>
    <string name="lynx_enable_group_trolls_key">lynx.groupauto</string>
    <string name="lynx_auto_rememe">Reverse Auto Meme</string>
    <string name="lynx_auto_rememe_key">lynx.reautomeme</string>
    <string name="lynx_auto_rememe_summary">BEST MEME EVER</string>
    <string name="lynx_pirate_talk">Pirate Talk</string>
    <string name="lynx_pirate_talk_key">lynx.piratetalk</string>
    <string name="lynx_pirate_talk_summary">Talk like a pirate!</string>
    <string name="lynx_clear">Clear</string>
    <string name="lynx_clear_chat">Clear Chat</string>
    <string name="lynx_clear_chat_summary">Clear Chat History</string>
    <string name="lynx_refresh_restart">Refresh/Restart</string>
    <string name="lynx_refresh_bliss">Refresh Bliss</string>
    <string name="lynx_restart_bliss">Restart Bliss</string>
    <string name="lynx_lurk_exposer">Lurk Exposer</string>
    <string name="lynx_lurk_exposer_key">lynx.lurk</string>
    <string name="lynx_lurk_exposer_summary">Expose Lurkers on groups</string>
    <string name="lurk_exposer_mode">Lurk Exposer Mode</string>
    <string name="lurk_exposer_mode_key">lynx.lurk.mode</string>
    <string name="lurk_exposer_mode_summary">Mode of your lurk exposer!</string>
    <string name="lynx_checkmark_style">Checkmark Style</string>
    <string name="lynx_checkmark_style_key">lynx.lurk.checkmark</string>
    <string name="lynx_checkmark_style_summary">Style of your Checkmark</string>
    <string name="lynx_lurker_count">Lurker Count</string>
    <string name="lynx_lurker_count_key">lynx.lurk.count</string>
    <string name="lynx_lurker_count_summary">Lurkers caught before re-catching the same lurkers</string>
    <string name="lynx_lurk">Lurk</string>
    <string name="lynx_toast_length">Toast Length</string>
    <string name="lynx_toast_length_key">lynx.wb.length</string>
    <string name="lynx_toast_length_summary">Duration of welcome back message</string>
    <string name="lynx_video_chat">Video Chat</string>
    <string name="lynx_hide_video_chat_icon">Hide video chat icon</string>
    <string name="lynx_hide_video_chat_icon_key">lynx.vidchat.icon</string>
    <string name="lynx_hide_video_chat_icon_summary">Hides start video chat icon</string>
    <string name="lynx_hide_video_chat_notifications">Hide video chat notifications</string>
    <string name="lynx_hide_video_chat_notifications_key">lynx.vidchat.notification</string>
    <string name="lynx_hide_video_chat_notifications_summary">Hides the notification if someone tried to video chat you</string>
	<string name="kyoto_settings">Kyotokek Settings</string>
</resources>