<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/lynx_settings" android:key="@string/lynx_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_general" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.AboutPref android:enabled="true" android:title="@string/lynx_about_bliss" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.UpdatePref android:enabled="true" android:title="@string/lynx_check_for_update" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.FaqPref android:enabled="true" android:title="@string/lynx_faq" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.HistoryPref android:enabled="true" android:title="@string/lynx_history" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.ChangeLogPref android:enabled="true" android:title="@string/lynx_changelog" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_appearance" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_square_pictures" android:key="@string/lynx_square_pictures_key" android:summary="@string/lynx_square_pictures_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_theme" kik:pref_divider="full_bottom" />
    <lynx.bliss.widget.preferences.list_LYNX android:enabled="true" android:entries="@array/lynx_bg" android:title="@string/lynx_background_color" android:key="@string/lynx_background_color_key" android:summary="@string/lynx_background_color_summary" android:entryValues="@array/lynx_bg" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_per_chat" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_receipts" android:title="@string/lynx_read_receipts" android:key="@string/lynx_read_receipts_key" android:summary="@string/lynx_read_receipts_summary" android:entryValues="@array/lynx_receipts" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_disable_typing" android:key="@string/lynx_disable_typing_key" android:summary="@string/lynx_disable_typing_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_media" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.MediaPref android:enabled="true" android:title="@string/lynx_media_options" android:summary="@string/lynx_media_options_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_video_chat" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_hide_video_chat_icon" android:key="@string/lynx_hide_video_chat_icon_key" android:summary="@string/lynx_hide_video_chat_icon_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_hide_video_chat_notifications" android:key="@string/lynx_hide_video_chat_notifications_key" android:summary="@string/lynx_hide_video_chat_notifications_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="Rab Loves Exploits" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="New to Kik" android:key="lynx.newtokik" android:summary="Adds a new to kik badge under the persons name if they are new to kik [Chat INFO]" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="Enable bio" android:key="lynx.bios" android:summary="Enables Bios [Adds Describe your self button under your profile pic to edit/add a bio]" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="Enable trophies" android:key="lynx.trophy" android:summary="Enables Trophies [Adds a trophy button to view your trophy collection]" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="Send Multiple Photos" android:key="lynx.multiphotos" android:summary="Allows you to select multiple photos from gallery" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="Rab Loves Music" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.LyricsPref android:enabled="true" android:title="Find Lyrics" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_clear" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.ClearPref android:enabled="true" android:title="@string/lynx_clear_chat" android:summary="@string/lynx_clear_chat_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_timestamps" kik:pref_divider="full_bottom" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_enable_timestamps" android:key="@string/lynx_enable_timestamps_key" android:summary="@string/lynx_enable_timestamps_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_random_timestamps" android:key="@string/lynx_random_timestamps_key" android:summary="@string/lynx_random_timestamps_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_timestamps" android:title="@string/lynx_custom_timestamps" android:key="@string/lynx_custom_timestamps_key" android:summary="@string/lynx_custom_timestamps_summary" android:entryValues="@array/lynx_timestamps_values" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_welcome_back" kik:pref_divider="full_bottom" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_enable_welcome_back" android:key="@string/lynx_enable_welcome_back_key" android:summary="@string/lynx_enable_welcome_back_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.WelcomeBack_LYNX android:enabled="true" android:title="@string/lynx_custom_welcome_back" android:summary="@string/lynx_custom_welcome_back_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_wb_length" android:title="@string/lynx_toast_length" android:key="@string/lynx_toast_length_key" android:summary="@string/lynx_toast_length_summary" android:entryValues="@array/lynx_wb_length_values" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_notifications" kik:pref_divider="full_bottom" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_hide_message_text" android:key="@string/lynx_hide_message_text_key" android:summary="@string/lynx_hide_message_text_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_hide_message_username" android:key="@string/lynx_hide_message_username_key" android:summary="@string/lynx_hide_message_username_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_hide_message_icon" android:key="@string/lynx_hide_message_icon_key" android:summary="@string/lynx_hide_message_icon_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_square_message_icon" android:key="@string/lynx_square_message_icon_key" android:summary="@string/lynx_square_message_icon_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_clipboard" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.SharePref android:enabled="true" android:title="@string/lynx_share_lynx" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.randomPasswordPref android:enabled="true" android:title="@string/lynx_random_password" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.UUIDPref android:enabled="true" android:title="@string/lynx_random_uuid" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.TimeDatePref android:enabled="true" android:title="@string/lynx_time_and_date" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.UnixPref android:enabled="true" android:title="@string/lynx_unix_timestamp" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.JIDPref android:enabled="true" android:title="@string/lynx_jid" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.UserNamePref android:enabled="true" android:title="@string/lynx_kik_username" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.FullNamePref android:enabled="true" android:title="@string/lynx_kik_full_name" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.FirstNamePref android:enabled="true" android:title="@string/lynx_kik_first_name" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.LastNamePref android:enabled="true" android:title="@string/lynx_kik_last_name" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.EmailPref android:enabled="true" android:title="@string/lynx_kik_email" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_troll" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_auto_read" android:key="@string/lynx_auto_read_key" android:summary="@string/lynx_auto_read_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_auto_reply" android:key="@string/lynx_auto_reply_key" android:summary="@string/lynx_auto_reply_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.customAutoReply_LYNX android:enabled="true" android:title="@string/lynx_custom_autoreply" android:summary="@string/lynx_custom_autoreply_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_auto_type" android:key="@string/lynx_auto_type_key" android:summary="@string/lynx_auto_type_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_enable_group_trolls" android:key="@string/lynx_enable_group_trolls_key" android:summary="@string/lynx_enable_group_trolls_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_auto_meme" android:key="@string/lynx_auto_meme_key" android:summary="@string/lynx_auto_meme_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_auto_rememe" android:key="@string/lynx_auto_rememe_key" android:summary="@string/lynx_auto_rememe_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_auto_annoy" android:key="@string/lynx_auto_annoy_key" android:summary="@string/lynx_auto_annoy_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_auto_nudes" android:key="@string/lynx_auto_nudes_key" android:summary="@string/lynx_auto_nudes_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_pirate_talk" android:key="@string/lynx_pirate_talk_key" android:summary="@string/lynx_pirate_talk_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_skynet" android:key="@string/lynx_skynet_key" android:summary="@string/lynx_skynet_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_lurk" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_lurk_exposer" android:key="@string/lynx_lurk_exposer_key" android:summary="@string/lynx_lurk_exposer_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_lurk_mode" android:title="@string/lurk_exposer_mode" android:key="@string/lurk_exposer_mode_key" android:summary="@string/lurk_exposer_mode_summary" android:entryValues="@array/lynx_lurk_mode" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_lurk_checkmark" android:title="@string/lynx_checkmark_style" android:key="@string/lynx_checkmark_style_key" android:summary="@string/lynx_checkmark_style_summary" android:entryValues="@array/lynx_lurk_checkmark" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_lurk_count" android:title="@string/lynx_lurker_count" android:key="@string/lynx_lurker_count_key" android:summary="@string/lynx_lurker_count_summary" android:entryValues="@array/lynx_lurk_count" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_other" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_anti_loggers" android:key="@string/lynx_anti_loggers_key" android:summary="@string/lynx_anti_loggers_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_do_not_disturb" android:key="@string/lynx_do_not_disturb_key" android:summary="@string/lynx_do_not_disturb_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_enable_links" android:key="@string/lynx_enable_links_key" android:summary="@string/lynx_enable_links_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_no_pull" android:key="@string/lynx_no_pull_key" android:summary="@string/lynx_no_pull_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_privacy_mode" android:key="@string/lynx_privacy_mode_key" android:summary="@string/lynx_privacy_mode_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_custom_crash" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_copy_error_log" android:key="@string/lynx_copy_error_log_key" android:summary="@string/lynx_copy_error_log_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_select_and_scroll_error_message" android:key="@string/lynx_select_and_scroll_error_message_key" android:summary="@string/lynx_select_and_scroll_error_message_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_enable_custom_title" android:key="@string/lynx_enable_custom_title_key" android:summary="@string/lynx_enable_custom_title_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_set_all_caps" android:key="@string/lynx_set_all_caps_key" android:summary="@string/lynx_set_all_caps_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_light_error_background_color" android:key="@string/lynx_light_error_background_color_key" android:summary="@string/lynx_light_error_background_color_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_dark_error_text_color" android:key="@string/lynx_dark_error_text_color_key" android:summary="@string/lynx_dark_error_text_color_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_emoticons" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.emotesPref android:enabled="true" android:title="@string/lynx_all_emoticons" android:summary="@string/lynx_all_emoticons_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.ghostPref android:enabled="true" android:title="@string/lynx_ghost_emoticons" kik:pref_divider="bottom|top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_refresh_restart" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.RefreshPref android:enabled="true" android:title="@string/lynx_refresh_bliss" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.RestartPref android:enabled="true" android:title="@string/lynx_restart_bliss" kik:pref_divider="top" />
</PreferenceScreen>