<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/kyoto_settings" android:key="@string/lynx_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_square_pictures" android:key="@string/lynx_square_pictures_key" android:summary="@string/lynx_square_pictures_summary" kik:pref_divider="none" />
   <lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="@string/lynx_square_message_icon" android:key="@string/lynx_square_message_icon_key" android:summary="@string/lynx_square_message_icon_summary" kik:pref_divider="top" />
    <lynx.bliss.widget.preferences.KikEmptyPreference android:enabled="false" android:title="@string/lynx_theme" kik:pref_divider="full_bottom" />
    <lynx.bliss.widget.preferences.list_LYNX android:enabled="true" android:entries="@array/lynx_bg" android:title="@string/lynx_background_color" android:key="@string/lynx_background_color_key" android:summary="@string/lynx_background_color_summary" android:entryValues="@array/lynx_bg" kik:pref_divider="top" />
	<lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/lynx_lurk_checkmark" android:title="@string/lynx_checkmark_style" android:key="@string/lynx_checkmark_style_key" android:summary="@string/lynx_checkmark_style_summary" android:entryValues="@array/lynx_lurk_checkmark" kik:pref_divider="top" />
	<lynx.bliss.widget.preferences.KikListPreference android:enabled="true" android:entries="@array/fonts_PIKEK" android:title="Text Font" android:key="fuck.you" android:summary="Font of text in messages" android:entryValues="@array/fontValues_PIKEK" kik:pref_divider="top" />
	<lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="New to Kik" android:key="lynx.newtokik" android:summary="Adds a new to kik badge under the persons name if they are new to kik [Chat INFO]" kik:pref_divider="top" />
	<lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="Enable bio" android:key="lynx.bios" android:summary="Enables Bios [Adds Describe your self button under your profile pic to edit/add a bio]" kik:pref_divider="top" />
	<lynx.bliss.widget.preferences.checkbox_LYNX android:enabled="true" android:title="Enable trophies" android:key="lynx.trophy" android:summary="Enables Trophies [Adds a trophy button to view your trophy collection]" kik:pref_divider="top" />
	</PreferenceScreen>